"""Donner Editor: in-tree migration of the external `donner-editor` prototype.

This package is the destination for the editor migration described in
`docs/design_docs/0020-editor.md`. Milestone 1 landed the package skeleton,
build-system foundation, and dependency wiring; subsequent milestones add
the actual editor source.

The editor builds as part of default `bazel test //...` on supported hosts —
there is no `--config=editor` feature flag. Heavy dependencies (imgui, glfw,
tracy, emsdk, pixelmatch-cpp17) are kept out of BCR consumer dependency
graphs via `dev_dependency = True` in `MODULE.bazel`.
"""

load("@bazel_skylib//lib:selects.bzl", "selects")
load("//build_defs:embed_resources.bzl", "embed_resources")
load("//build_defs:rules.bzl", "donner_cc_binary", "donner_cc_library", "renderer_backend_compatible_with")

# Editor libraries are public so the //examples:svg_viewer target (in the
# separate examples Bazel module) can depend on `:text_editor`. BCR
# consumers cannot transitively use the editor libraries because
# imgui/glfw/tracy are `dev_dependency = True` in MODULE.bazel and won't
# resolve outside dev builds.
package(default_visibility = ["//visibility:public"])

exports_files(
    ["main.cc"],
    visibility = ["//donner/editor/wasm:__pkg__"],
)

# Single source of truth for the editor render pane's screen↔document
# coordinate mapping, including zoom, pan, DPR, and the focal-point-
# preserving zoom math. See `docs/design_docs/0025-editor_ux.md`.
donner_cc_library(
    name = "viewport_state",
    srcs = ["ViewportState.cc"],
    hdrs = ["ViewportState.h"],
    # Sandbox tests exercise this directly to reproduce the thin-client
    # viewport-centering regression.
    visibility = ["//donner/editor:__subpackages__"],
    deps = [
        "//donner/base",
    ],
)

donner_cc_library(
    name = "selection_aabb",
    srcs = ["SelectionAabb.cc"],
    hdrs = ["SelectionAabb.h"],
    deps = [
        ":viewport_state",
        "//donner/base",
        "//donner/svg",
    ],
)

# render_pane_gesture moved to //donner/editor/backend_lib

donner_cc_library(
    name = "pinch_event_monitor",
    srcs = ["PinchEventMonitor.cc"] + select({
        "@platforms//os:macos": [],
        "//conditions:default": ["PinchEventMonitorStub.cc"],
    }),
    hdrs = ["PinchEventMonitor.h"],
    deps = [
        "//donner/editor/backend_lib:render_pane_gesture",
    ],
)

objc_library(
    name = "pinch_event_monitor_macos",
    srcs = ["PinchEventMonitorMac.mm"],
    copts = ["-fblocks"],
    sdk_frameworks = ["Cocoa"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":pinch_event_monitor",
        "@glfw",
    ],
)

# command_queue, async_svg_document moved to //donner/editor/backend_lib

donner_cc_library(
    name = "text_patch",
    srcs = ["TextPatch.cc"],
    hdrs = ["TextPatch.h"],
    deps = [
        "//donner/base",
    ],
)

# attribute_writeback moved to //donner/editor/backend_lib

# async_renderer moved to //donner/editor/backend_lib

# change_classifier moved to //donner/editor/backend_lib

# source_sync moved to //donner/editor/backend_lib

# editor_app moved to //donner/editor/backend_lib

# tool, select_tool moved to //donner/editor/backend_lib

donner_cc_library(
    name = "overlay_renderer",
    srcs = ["OverlayRenderer.cc"],
    hdrs = ["OverlayRenderer.h"],
    # Sandbox backend draws selection chrome into the composited
    # bitmap via this helper — keeps the AABB + path outlines pixel-
    # locked to the rendered content, no ImGui shear on drag.
    visibility = ["//donner/editor:__subpackages__"],
    deps = [
        ":selection_aabb",
        ":tracy_wrapper",
        "//donner/editor/backend_lib:editor_app",
        "//donner/base",
        "//donner/css",
        "//donner/svg",
        "//donner/svg/renderer",
    ],
)

# Extracts the notice_editor.txt file from the license aggregation
# rule so it can be embedded into the editor binary. The rule produces
# both `.txt` and `.json`; we only want the text for the About dialog.
filegroup(
    name = "notice_editor_txt",
    srcs = ["//third_party/licenses:notice_editor"],
    output_group = "notice",
)

# Embed the NOTICE text into the editor binary. `//donner/editor:notice`
# exposes `donner::embedded::kEditorNoticeText` as a
# `std::span<const unsigned char>`. The editor's Help → About dialog
# displays this.
embed_resources(
    name = "notice",
    header_output = "donner/editor/Notice.h",
    resources = {
        "kEditorNoticeText": ":notice_editor_txt",
    },
)

embed_resources(
    name = "editor_icon",
    header_output = "donner/editor/EditorIcon.h",
    resources = {
        "kEditorIconSvg": "//:donner_icon.svg",
    },
)

embed_resources(
    name = "editor_splash",
    header_output = "donner/editor/EditorSplash.h",
    resources = {
        "kEditorSplashSvg": "//:donner_splash.svg",
    },
)

_EDITOR_RUNTIME_DEPS = [
    ":address_bar",
    ":address_bar_dispatcher",
    ":content_sniffer",
    ":editor_backend_client",
    ":editor_icon",
    ":editor_splash",
    ":local_path_display",
    ":pinch_event_monitor",
    ":resource_policy",
    ":svg_fetcher",
    ":viewport_state",
    "//donner/editor/sandbox:svg_source",
] + select({
    "@platforms//os:macos": [":pinch_event_monitor_macos"],
    "//conditions:default": [],
}) + [
    ":text_editor",
    ":text_patch",
    ":tracy_wrapper",
    "//donner/base",
    "//donner/editor/repro:repro_recorder",
    "//donner/svg/renderer:pixel_format_utils",
    "//donner/svg/renderer:renderer_interface",
    "//third_party/fira-code",
    "//third_party/glad",
    "//third_party/roboto",
    "@glfw",
    "@imgui",
] + select({
    "@platforms//os:linux": [
        ":editor_backend_client_session",
        "//donner/editor/sandbox:session",
    ],
    "//conditions:default": [
        ":editor_backend_client_inprocess",
    ],
})

donner_cc_library(
    name = "editor_notice_inputs",
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = _EDITOR_RUNTIME_DEPS,
)

# The full Donner editor binary. Wires EditorApp + SelectTool +
# OverlayRenderer + TextEditor into an ImGui shell with a live source
# pane and a click-and-drag render pane. The minimal viewer demo lives
# at `//examples:svg_viewer`.
#
#     bazel run //donner/editor -- donner_splash.svg
donner_cc_binary(
    name = "editor",
    srcs = ["main.cc"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = _EDITOR_RUNTIME_DEPS + [
        ":notice",
        # Link the real Tracy client so the desktop editor can be profiled.
        # The sandboxed backend binary deliberately does NOT depend on this
        # (see the tracy_wrapper_enabled comment in this file).
        ":tracy_wrapper_enabled",
    ],
)

donner_cc_library(
    name = "text_buffer",
    hdrs = ["TextBuffer.h"],
    deps = [
        "//donner/base",
    ],
)

# Header-only Tracy macro wrapper. `TracyWrapper.h` expands the macros to
# no-ops unless `ENABLE_TRACY` is defined in the translation unit's compile
# context — which only happens for the main desktop editor binary via
# `tracy_wrapper_enabled` below.
#
# Rationale: the sandboxed `donner_editor_backend` child process must not
# link `@tracy//:tracy_client`, because Tracy's static initializers call
# `InitKernelSymbols()` which reads `/proc/kallsyms` and asserts when
# seccomp blocks the read. Making the wrapper header-only by default keeps
# Tracy-linked translation units — profiling symbols and all — opt-in.
donner_cc_library(
    name = "tracy_wrapper",
    hdrs = ["TracyWrapper.h"],
    deps = [],
)

# Opt-in target that activates Tracy profiling. Depend on this instead of
# `:tracy_wrapper` only from binaries that want the full Tracy runtime
# linked (i.e. the desktop editor main binary). Intermediate libraries
# should continue to depend on `:tracy_wrapper` so they can be reused in
# the sandboxed backend.
donner_cc_library(
    name = "tracy_wrapper_enabled",
    hdrs = ["TracyWrapper.h"],
    defines = selects.with_or({
        ("@platforms//cpu:wasm32", "@platforms//cpu:wasm64"): [],
        "//conditions:default": ["ENABLE_TRACY"],
    }),
    deps = selects.with_or({
        ("@platforms//cpu:wasm32", "@platforms//cpu:wasm64"): [],
        "//conditions:default": [
            "@tracy//:tracy_client",
        ],
    }),
)

donner_cc_library(
    name = "text_editor_core",
    srcs = ["TextEditorCore.cc"],
    hdrs = ["TextEditorCore.h"],
    deps = [
        ":text_buffer",
        "//donner/base",
    ],
)

donner_cc_library(
    name = "text_editor",
    srcs = ["TextEditor.cc"],
    hdrs = ["TextEditor.h"],
    deps = [
        ":imgui_includes",
        ":text_buffer",
        ":text_editor_core",
        "//donner/base",
        "@imgui",
    ],
)

# undo_timeline moved to //donner/editor/backend_lib

donner_cc_library(
    name = "resource_policy",
    srcs = [
        "CurlAvailability.cc",
        "ResourcePolicy.cc",
    ],
    hdrs = ["ResourcePolicy.h"],
    deps = [],
)

donner_cc_library(
    name = "address_bar",
    srcs = ["AddressBar.cc"],
    hdrs = ["AddressBar.h"],
    deps = [
        ":address_bar_status",
        "@imgui",
    ],
)

# Tiny header-only slice of `address_bar` that carries just the
# `AddressBarStatus` enum + chip struct — no ImGui dependency so
# headless backend-client consumers can ship the chip through
# `FrameResult.statusChip` without pulling in GLFW / libX11 on
# Linux remote-execution workers.
donner_cc_library(
    name = "address_bar_status",
    hdrs = ["AddressBarStatus.h"],
    visibility = ["//donner/editor:__subpackages__"],
)

donner_cc_library(
    name = "svg_fetcher",
    srcs = selects.with_or({
        ("@platforms//cpu:wasm32", "@platforms//cpu:wasm64"): ["SvgFetcherWasm.cc"],
        "//conditions:default": ["SvgFetcher.cc"],
    }),
    hdrs = ["SvgFetcher.h"],
    deps = selects.with_or({
        ("@platforms//cpu:wasm32", "@platforms//cpu:wasm64"): [],
        "//conditions:default": [
            ":resource_policy",
            "//donner/editor/sandbox:svg_source",
        ],
    }),
)

# Glue between `AddressBar` (UI widget) and `SvgFetcher` (I/O). Kept in its
# own library so `main.cc` doesn't inline the logic and tests can drive the
# navigation → fetch → loadBytes flow with a fake fetcher.
donner_cc_library(
    name = "address_bar_dispatcher",
    srcs = ["AddressBarDispatcher.cc"],
    hdrs = ["AddressBarDispatcher.h"],
    deps = [
        ":address_bar",
        ":address_bar_status",
        ":svg_fetcher",
    ],
)

# Byte-prefix heuristic used by the address-bar load flow to convert the
# common "that wasn't SVG, that was an HTML file-description page" failure
# mode into a specific, actionable error chip. See `ContentSniffer.h`.
donner_cc_library(
    name = "content_sniffer",
    srcs = ["ContentSniffer.cc"],
    hdrs = ["ContentSniffer.h"],
    deps = [],
)

# Cosmetic URI → display-string helper. Rewrites absolute paths inside
# the editor's cwd to `./relative`, leaves http(s)/data URIs alone.
donner_cc_library(
    name = "local_path_display",
    srcs = ["LocalPathDisplay.cc"],
    hdrs = ["LocalPathDisplay.h"],
    deps = [],
)

# Header-only target for the EditorBackendClient abstract interface.
donner_cc_library(
    name = "editor_backend_client",
    hdrs = [
        "EditorBackendClient.h",
        "SelectionOverlay.h",
    ],
    # Sandbox tests drive the full host-side flow through this interface,
    # so they need to link the header.
    visibility = ["//donner/editor:__subpackages__"],
    deps = [
        ":address_bar_status",
        "//donner/base",
        "//donner/editor/sandbox:editor_api_codec",
        "//donner/editor/sandbox:session_protocol",
        "//donner/editor/sandbox/bridge:bridge_texture",
        "//donner/svg/renderer:renderer_interface",
    ],
)

# Desktop (session-backed) implementation of EditorBackendClient.
donner_cc_library(
    name = "editor_backend_client_session",
    srcs = ["EditorBackendClient_Session.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":editor_backend_client",
        "//donner/editor/sandbox:editor_api_codec",
        "//donner/editor/sandbox:replaying_renderer",
        "//donner/editor/sandbox:session",
        "//donner/editor/sandbox:session_codec",
        "//donner/svg/renderer",
    ],
)

# In-process implementation of EditorBackendClient (WASM + desktop tests).
# Statically links the backend core into the same address space — no OS-level
# sandbox IPC — so it compiles on every platform that has a renderer backend.
# The sibling `editor_backend_client_session` is the Linux-only desktop
# variant that actually speaks to a subprocess sandbox.
donner_cc_library(
    name = "editor_backend_client_inprocess",
    srcs = ["EditorBackendClient_InProcess.cc"],
    target_compatible_with = renderer_backend_compatible_with(["tiny_skia", "geode"]),
    # Sandbox tests drive this impl directly to reproduce the host-side
    # thin-client flow under gtest.
    visibility = ["//donner/editor:__subpackages__"],
    deps = [
        ":editor_backend_client",
        "//donner/editor/sandbox:editor_backend_core",
        "//donner/svg/renderer",
    ],
)

# --- New composited-rendering presenter/controller targets (from #531) ---
# These are library targets NOT linked into the thin-client main.cc.
# They build and test against backend_lib deps and will be integrated
# into the sandbox architecture in a follow-up.

donner_cc_library(
    name = "imgui_includes",
    hdrs = [
        "ImGuiBackendIncludes.h",
        "ImGuiIncludes.h",
        "ImGuiInternalIncludes.h",
    ],
    deps = ["@imgui"],
)

donner_cc_library(
    name = "selection_overlay",
    hdrs = ["SelectionOverlay.h"],
    deps = [
        "//donner/base",
        "//donner/svg/renderer:renderer_interface",
    ],
)
